Add api for polls
